Fix scrolling bug on navbar on mobile with extended settings

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1136,6 +1136,7 @@ select {
 	aside.main-sidebar {
 		position: initial;
 		height: auto;
+		max-height: initial;
 	}
 	aside .logo img {
 		max-width: 250px;
